clusters/labinfra/apps/kestra.xuperson.org/kestra-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kestra
  labels:
    name: kestra
